Fixed task button alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,8 @@ form.task-form {
 }
 
 .plus-icon {
-  font-size: 2rem;
+  font-size: 1.8rem;
+  line-height: 1;
 }
 
 .task-list {
